--- a/plugin/status/main.scss
+++ b/plugin/status/main.scss
@@ -1,5 +1,5 @@
-@use "sass:math";
-@use "../../style/common" as *;
+@use 'sass:math';
+@use '../../style/common' as *;
 
 $s-h: 36px;
 $btn-interval: 12px;
@@ -11,138 +11,143 @@ $icon-w: 18px;
 $msg-icon-w: 14px;
 
 @mixin msg {
-  @include v-center($item-h);
-  border: none;
-  padding: 0 $fn-space;
-  background-color: get($bg, "pop", 1);
-  border-radius: get($radius, "base");
-  box-shadow: get($shadow, 1);
-  margin: math.div($s-h - $item-h, 2) $fn-space 0 0;
+    @include v-center($item-h);
+    border: none;
+    padding: 0 $fn-space;
+    background-color: get($bg, 'pop', 1);
+    border-radius: get($radius, 'base');
+    box-shadow: get($shadow, 1);
+    margin: math.div($s-h - $item-h, 2) $fn-space 0 0;
 }
 
 @keyframes msg-w {
-  from {
-    max-width: 400px;
-  }
-  90% {
-    max-width: 400px;
-  }
-  to {
-    max-width: 180px;
-  }
+    from {
+        max-width: 400px;
+    }
+    90% {
+        max-width: 400px;
+    }
+    to {
+        max-width: 180px;
+    }
 }
 
 #status {
-  position: fixed;
-  padding: 0;
-  background-color: transparent;
-  right: $dock-w + $btn-interval;
-  bottom: $btn-interval;
-  height: $s-h;
-  transition: width get($transition-duration, "base")
-    get($transition-function, "ease-in-out");
-  border: none;
+    position: fixed;
+    padding: 0;
+    background-color: transparent;
+    right: $dock-w + $btn-interval;
+    bottom: $btn-interval;
+    height: $s-h;
+    transition: width get($transition-duration, 'base') get($transition-function, 'ease-in-out');
+    border: none;
 
-  // 右下角按钮
-  .toolbar__item {
-    @include item("pop");
-    @include svg-div($s-h, $icon-w);
+    // 右下角按钮
+    .toolbar__item {
+        @include item('pop');
+        @include svg-div($s-h, $icon-w);
 
-    border-radius: get($radius, "circle");
-    box-shadow: get($shadow, 1);
+        border-radius: get($radius, 'circle');
+        box-shadow: get($shadow, 1);
 
-    .b3-menu {
-      left: unset !important;
-      z-index: 0;
+        .b3-menu {
+            left: unset !important;
+            z-index: 0;
+        }
+
+        &::after {
+            display: none;
+        }
     }
 
-    &::after {
-      display: none;
-    }
-  }
+    #statusHelp {
+        &::before {
+            content: '';
+            @include reset-style();
+            @include add-icon('question', get($text, 'secondary'), 24, round);
+            -webkit-mask: url('../../asset/icons/question_black_24dp.svg') round;
+            @include svg($icon-w);
+            opacity: 1;
+            transition: get($transition, 'all');
+        }
 
-  #statusHelp {
-    &::before {
-      content: "";
-      @include reset-style();
-      @include add-icon("question", get($text, "secondary"), 24, round);
-      -webkit-mask: url("../../asset/icons/question_black_24dp.svg") round;
-      @include svg($icon-w);
-      opacity: 1;
-      transition: get($transition, "all");
-    }
+        &:hover::before {
+            background-color: get($text, 'primary');
+        }
 
-    &:hover::before {
-      background-color: get($text, "primary");
-    }
+        > svg {
+            display: none !important;
+        }
 
-    > svg {
-      display: none !important;
+        > .fn__flex-1 {
+            display: none;
+        }
     }
-
-    > .fn__flex-1 {
-      display: none;
-    }
-  }
 }
 
 .rc-dock-menu {
-  // bottom: 0 !important;
-  bottom: $s-h + $btn-interval + $fn-space * 2 !important;
-  left: auto !important;
-  right: 150px + $fn-space * 3 !important;
+    // bottom: 0 !important;
+    bottom: $s-h + $btn-interval + $fn-space * 2 !important;
+    left: auto !important;
+    right: 150px + $fn-space * 3 !important;
 }
 
-#commonMenu[data-name="statusHelp"] {
-  left: auto !important;
-  bottom: $s-h + $btn-interval + $fn-space * 2 !important;
-  right: $fn-space !important;
+#commonMenu[data-name='statusHelp'] {
+    left: auto !important;
+    bottom: $s-h + $btn-interval + $fn-space * 2 !important;
+    right: $fn-space !important;
 }
 
 // 边栏设置按钮
 #barDock {
-  display: none;
+    display: none;
+}
+
+.status__backgroundtask {
+    &:not(:empty) {
+        @include msg();
+        padding-right: 0;
+    }
 }
 
 // 状态栏
 .status__msg {
-  position: unset;
-  padding: 0;
+    position: unset;
+    padding: 0;
 
-  &:not(:empty) {
-    @include msg();
-    display: inline-block;
-    max-width: 180px;
-    animation: msg-w 2s ease-out;
-    transition: max-width get($transition-duration, "base")
-      get($transition-function, "ease-in-out");
-    &::before {
-      content: "🛈";
-      display: inline-flex;
-      margin: 0 $interval 0 0;
-      background-color: transparent;
-      -webkit-mask: none;
-      mask: none;
+    &:not(:empty) {
+        @include msg();
+        display: inline-block;
+        max-width: 180px;
+        animation: msg-w 2s ease-out;
+        transition: max-width get($transition-duration, 'base') get($transition-function, 'ease-in-out');
+        &::before {
+            content: '🛈';
+            display: inline-flex;
+            margin: 0 $interval 0 0;
+            background-color: transparent;
+            -webkit-mask: none;
+            mask: none;
+        }
+        &:hover {
+            max-width: 400px !important;
+        }
     }
-    &:hover {
-      max-width: 400px !important;
-    }
-  }
 }
 
 // 文档统计
 .status__counter {
-  &:not(:empty) {
-    @include msg();
-    padding-right: $fn-space - 5px;
-  }
+    &:not(:empty) {
+        @include msg();
+        padding-right: $fn-space - 5px;
+    }
 }
 
 // dock
 .dock--vertical div:last-child:not(:empty) {
-  margin-bottom: $interval !important;
+    margin-bottom: $interval !important;
 }
 
 .layout__center .sy__backlink {
-  padding-bottom: 40px;
+    padding-bottom: 40px;
 }
