--- a/style/panel/index.scss
+++ b/style/panel/index.scss
@@ -1,23 +1,25 @@
-@use "block-icons";
+@use 'block-icons';
 
-@use "block-popover";
+@use 'block-popover';
 
-@use "sy-file";
+@use 'sy-file';
 
-@use "sy-outline";
+@use 'sy-outline';
 
-@use "sy-backlink";
+@use 'sy-backlink';
 
-@use "graph";
+@use 'graph';
 
-@use "inbox";
+@use 'inbox';
 
-@use "loading";
+@use 'loading';
 
-@use "full-screen";
+@use 'full-screen';
 
-@use "emojis";
+@use 'emojis';
 
-@use "viewer";
+@use 'viewer';
 
-@use "preview";
+@use 'preview';
+
+@use 'window';
