fix: :bug: 修复文档树开启卡顿的问题

--- a/plugin/tabBar/main.scss
+++ b/plugin/tabBar/main.scss
@@ -275,12 +275,12 @@ $item-radius: get($radius, $item-type);
     }
 }
 
-#drag {
-    height: 0;
-    body:has(.layout__empty) & {
-        @include v-center($top-h);
-    }
-}
+// #drag {
+//     height: 0;
+//     // body:has(.layout__empty) & {
+//     //     @include v-center($top-h);
+//     // }
+// }
 
 //  dock
 .dock--vertical {
