--- a/style/layout/top-bar.scss
+++ b/style/layout/top-bar.scss
@@ -82,18 +82,6 @@ $list: ('Sync', 'History', 'DailyNote', 'Search', 'Readonly', 'Mode', 'Setting')
         padding: 0;
     }
 
-    &::before {
-        $icon-w: get($icon, 'large');
-        content: '';
-        display: flex;
-        display: block;
-        width: $icon-w;
-        height: $icon-w;
-        margin: auto math.div(dock.$dock-w - $icon-w, 2);
-        background-image: url('#{$asset-path}/icons/siyuan.svg');
-        background-repeat: round;
-    }
-
     .toolbar__item {
         -webkit-app-region: no-drag;
         @include top-item();
@@ -106,6 +94,7 @@ $list: ('Sync', 'History', 'DailyNote', 'Search', 'Readonly', 'Mode', 'Setting')
             }
             &Workspace {
                 padding: 7px 10px;
+                margin-left: $interval;
                 .toolbar__text {
                     font-weight: 600;
                     font-size: get($font-size, 'base');
