--- a/style/protyle/inline/mark.scss
+++ b/style/protyle/inline/mark.scss
@@ -1,24 +1,18 @@
-@use "../../common" as *;
+@use '../../common' as *;
 
-$search-bg: get($color, "yellow", 2);
-$mark: get($color, "cyan", 2);
+$search-bg: get($color, 'yellow', 2);
+$mark: get($color, 'cyan', 2);
 
 :root {
-  // 编辑器搜索颜色
-  --b3-protyle-search-background: #{$search-bg};
-  --b3-protyle-inline-mark-color: #{get($text, "primary")};
-  --b3-protyle-inline-mark-background: #{$search-bg};
+    // 编辑器搜索颜色
+    --b3-protyle-search-background: #{$search-bg};
+    --b3-protyle-inline-mark-color: #{get($text, 'primary')};
+    --b3-protyle-inline-mark-background: #{$search-bg};
 }
 
 .b3-typography,
 .protyle-wysiwyg {
-  span[data-type~="mark"] {
-    background-color: transparent;
-    background-image: linear-gradient(
-      transparent,
-      transparent 40%,
-      $mark 70%,
-      $mark 100%
-    );
-  }
+    span[data-type~='mark'] {
+        background-color: $mark;
+    }
 }
